# BinFS

./: .gitignore  Cargo.toml  EVALUATION.md  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
binfs/: Cargo.toml  README.md
binfs/src/: chunks.rs  fuse.rs  lib.rs  metadata.rs  service.rs
binfs/tests/: chunks.rs  concurrency.rs  metadata.rs  rpc.rs  service.rs
binfs/tests/common/: mod.rs
lab/: build.rs
lab/src/: Report.md  backend.rs  bin.rs  frontend.rs  keeper.rs  lab.rs  lab1.rs  lib.rs  mod.rs  utils.rs
testbed/: benchmark.sh  common.sh  concurrency.sh  fault-tolerance.sh  functional.sh  repeat-benchmark.sh  run-all.sh  start.sh  stop.sh
testbed/results/20260611-154806-run-1/: environment.txt  fuse.csv  native.csv  service.csv
testbed/results/20260611-154806-run-2/: environment.txt  fuse.csv  native.csv  service.csv
testbed/results/20260611-154806-run-3/: environment.txt  fuse.csv  native.csv  service.csv
testbed/results/20260611-154806-run-4/: environment.txt  fuse.csv  native.csv  service.csv
testbed/results/20260611-154806-run-5/: environment.txt  fuse.csv  native.csv  service.csv
testbed/results/20260611-181800-run-1/: environment.txt  fuse.csv  native.csv  service.csv
testbed/results/20260611-181800-run-2/: environment.txt  fuse.csv  native.csv  service.csv
testbed/results/20260611-181800-run-3/: environment.txt  fuse.csv  native.csv  service.csv
testbed/results/20260611-181800-run-4/: environment.txt  fuse.csv  native.csv  service.csv
testbed/results/20260611-181800-run-5/: environment.txt  (+3 more)
tribbler/: build.rs
