[package]
name = "binfs"
version = "0.1.0"
edition = "2021"

[features]
default = []
mount = ["dep:fuser"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
fuser = { version = "0.17", optional = true }
lab = { path = "../lab" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tribbler = { path = "../tribbler" }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "binfs-mount"
path = "src/bin/binfs_mount.rs"
required-features = ["mount"]
